fdo#72287 Scroll automatically to show selected item when keyboard used.

806919adf9c9bafbaba92c2d2ab35d2e2f9863f8 added finer-grained scrolling using
the scrollbar / scrollwheel, but inadvertently prevents the display from scrolling
when an item is selected that is currently offscreen (e.g. by using the down-arrow
button on the keyboard).

Change-Id: Iaa3a7dc6d214741d37cf4ec78c00ed0034ed1e42